<resources>
    <string name="app_name">common_base</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="money">¥</string>

    <string name="tab1_menu">待接单</string>
    <string name="tab2_menu">工作中</string>
    <string name="tab3_menu">已完成</string>
    <string name="tab4_menu">售后</string>
    <string name="tab5_menu">个人中心</string>
    <string name="service_desc"></string>
    <string name="MainBehavior">com.ysxsoft.home.view.MainBehavior</string>
    <string name="MainTestBehavior">com.ysxsoft.home.view.MainTestBehavior</string>

    <string name="versionchecklib_confirm">立即更新</string>
    <string name="versionchecklib_cancel">暂不更新</string>
    <string name="versionchecklib_retry">重试</string>
    <string name="versionchecklib_download_fail_retry">下载失败是否重试？</string>
    <string name="versionchecklib_download_finish">下载完成，点击安装</string>
    <string name="versionchecklib_downloading">正在下载中...</string>
    <string name="versionchecklib_check_new_version">检测到新版本</string>
    <string name="versionchecklib_download_progress">下载进度:%d%%/100%%</string>
    <string name="versionchecklib_download_fail">下载失败，点击重试</string>
    <string name="versionchecklib_progress">%d/100</string>
    <string name="versionchecklib_write_permission_deny">下载安装包需要读写文件权限。</string>
    <string name="versionchecklib_download_apkname">%s.apk</string>
</resources>
